Lab 6 login nefunc, a se continua de la pagina 8.